# VISP

./: .gitignore  Cargo.toml  Dioxus.toml  LICENSE  README.md  input.css  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vercel.json  vite.config.js  vite.config.ts
.github/workflows/: labels.yml  rust-clippy.yml  rust.yml  visp-build.yml
assets/: tailwind.css
assets/fontawesome/css/: solid.min.css
common/: Cargo.toml
common/src/: lib.rs
desktop/: Cargo.toml  Dioxus.toml
desktop/src/: main.rs
docs/: ROADMAP.md  SETUP.md
fullstack/: Cargo.toml  Dioxus.toml
fullstack/src/: main.rs
old/: Cargo.toml
old/assets/: tailwind.css
old/docs/: SETUP.md
public/assets/css/: tailwind.css
scripts/: setup.ps1
src/: android.rs  app.css  app.d.ts  app.html  desktop.rs  main.rs  tailwind.css  web.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: mod.rs  nav_bar.rs
src/lib/: index.ts
src/lib/components/ui/visp/: ContextMenubar.svelte
src/modules/video/: desktop_video_manager.rs  mod.rs  web_video_manager.rs
src/routes/: +layout.svelte  +page.svelte  +page.ts  home.rs  image.rs  images.rs  mod.rs  not_found.rs  post.rs  sound.rs  video.rs
src/routes/(sections)/: +layout.svelte
src/routes/(sections)/image/: +page.svelte
src/routes/(sections)/post/: +page.svelte
src/routes/(sections)/sound/: +page.svelte
src/routes/(sections)/video/: +page.svelte
visp_common/: Cargo.toml  app.css
visp_common/public/assets/css/: tailwind.css
visp_common/src/: lib.rs
visp_common/src/components/: nav_bar.rs
visp_common/src/routes/: home.rs  images.rs  mod.rs  not_found.rs  post.rs  sound.rs  video.rs
visp_desktop/: Cargo.toml  Dioxus.toml
visp_desktop/src/: main.rs
visp_web/: Cargo.toml  Dioxus.toml
visp_web/src/: main.rs
