# Generate Tailwind
# npx tailwindcss --config ./tailwind.config.js -i ./input.css -o ./public/assets/css/tailwind.css --minify --watch

# Dev
# dx serve --hot-reload --platform desktop
# dx serve --hot-reload --platform web

# Build Instructions
# dx bundle --platform desktop --release --verbose
# dx build --platform web --release

[package]
name = "visp"
version = "0.1.3"
edition = "2021"
authors = ["Kristopher Ali <kristopher.ali.dev+visp@gmail.com>"]
description = "Video. Image. Sound. Post. VISP is an open source multimedia editor built entirely using Rust. It works on all Desktop and Mobile platforms. And you can integrate it with your favorite social media sites like YouTube and Instagram!"
resolver = "2"

[package.metadata.bundle]
name = "VISP"
identifier = "io.kristech.visp"
version = "0.1.3"
copyright = "MIT License Copyright (c) 2023-2024 Quaint Studios. All rights reserved."
category = "Multimedia"
short_description = "Video. Image. Sound. Post. A versatile tool."
long_description = """
Video. Image. Sound. Post. VISP is an open source multimedia editor built entirely using Rust. It works on all Desktop and Mobile platforms. And you can integrate it with your favorite social media sites like YouTube and Instagram!
"""

[dependencies]
manganis = "0.2.2"
web-sys = { version = "0.3.69", features = ["Blob", "FilePropertyBag", "Url", "File"] }

[target.'cfg(target_family = "windows")'.dependencies]
dioxus = { version = "0.5.1", features = ["desktop", "router"] }
platform-dirs = "0.3.0"
gstreamer = "0.22.5"
gstreamer-app = "0.22.0"
gstreamer-video = "0.23.2"

[target.'cfg(target_family = "wasm")'.dependencies]
dioxus = { version = "0.5.1", features = ["web", "router"] }
