[package]
name = "visp_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "*" }
dioxus-router = { version = "*" }
dioxus-fullstack = { version = "*", optional = true }
dioxus-desktop = { version = "*", optional = true }

[features]
web = ["dioxus-fullstack"]
desktop = ["dioxus-desktop"]

[lib]