[package]
name = "visp_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { workspace = true }
dioxus-router = { workspace = true }
dioxus-fullstack = { workspace = true, optional = true }
dioxus-desktop = { workspace = true, optional = true }

[features]
default = ["desktop"]
web = ["dioxus-fullstack"]
desktop = ["dioxus-desktop"]

[lib]