resolver.workspace = true

[package]
name = "desktop"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true

[metadata.bundle]
name.workspace = true
identifier.workspace = true
version.workspace = true
copyright.workspace = true
category.workspace = true
short_description.workspace = true
long_description.workspace = true

[dependencies]
dioxus = { workspace = true }
dioxus-desktop = { workspace = true }
visp_common = { path = "../common" }

[features]
bundle = []
