[package]
name = "fullstack"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true

[package.metadata.bundle]
name = "VISP"
identifier = "io.kristech.visp"
version = "0.1.0"
copyright = "MIT License Copyright (c) 2023-2024 Quaint Studios. All rights reserved."
category = "Multimedia"
short_description = "Video. Image. Sound. Post. A versatile tool."
long_description = """
Video. Images. Sound. Post. VISP is an open source multimedia editor built entirely using Rust. It works on all Desktop and Mobile platforms. And you can integrate it with your favorite social media sites like YouTube and Instagram!
"""

[dependencies]
dioxus = { workspace = true }
dioxus-fullstack = { workspace = true }
visp_common = { path = "../common" }

[features]
default = []
ssr = ["dioxus-fullstack/axum"]
web = ["dioxus-fullstack/web"]
