[package]
name = "visp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "visp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

gstreamer = "0.24.1"
gstreamer-editing-services = "0.24.0"
gstreamer-base = "0.24.0"
gstreamer-video = "0.24.1"
gstreamer-pbutils = "0.24.0"
gstreamer-sys = "0.24.0"

tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
