# Generate Tailwind
# npx tailwindcss --config ./tailwind.config.js -i ./app.css -o ./public/assets/css/tailwind.css --minify --watch


[package]
name = "visp_common"
version.workspace = true
edition.workspace = true

authors.workspace = true
description.workspace = true

[dependencies]
dioxus = { workspace = true }
dioxus-router = { workspace = true }